# ksl

./: .buildinfo  .clang-format  .clang_complete  .gitignore  CMakeLists.txt  CNAME  Jenkinsfile  LICENSE.md  README.md  about.html  genindex.html  index.html  installation.html  license.html  license.rst  objects.inv  readme.rst  search.html  searchindex.js  zreferences.html
SE3/: SE3.html
SO3/: SO3.html
_sources/: about.rst.txt  index.rst.txt  license.rst.txt  zreferences.rst.txt
_sources/SE3/: SE3.rst.txt
_sources/SO3/: SO3.rst.txt
_sources/contributing/: contributing.rst.txt
_sources/coscrews/: coscrews.rst.txt
_sources/doxyrest/: enum_ksl_axis_enum_t.rst.txt  global.rst.txt  page_index.rst.txt  page_todo.rst.txt  struct_ksl_print_options_t.rst.txt  struct_ksl_vec3_t_fieldnames.rst.txt  struct_ksl_vec3_t_vec.rst.txt  union_ksl_SE3_t.rst.txt  union_ksl_SE3f_t.rst.txt  union_ksl_coscrew_t.rst.txt  union_ksl_inertiaf_t.rst.txt  union_ksl_mat3x3f_t.rst.txt  union_ksl_mat4x4f_t.rst.txt  union_ksl_quaternion_t.rst.txt  union_ksl_quaternionf_t.rst.txt  union_ksl_screw_t.rst.txt  union_ksl_screwf_t.rst.txt  union_ksl_vec3_t.rst.txt  union_ksl_vec3f_t.rst.txt  union_ksl_vec3i_t.rst.txt  union_ksl_vec4_t.rst.txt  union_ksl_vec4f_t.rst.txt
_sources/inertia/: inertia.rst.txt
_sources/linalg/: linalg.rst.txt
_sources/lu_full/: lu_full.rst.txt
_sources/mat3x3/: mat3x3.rst.txt
_sources/matrix-matrix/: matrix-matrix.rst.txt
_sources/notation/: notation.rst.txt
_sources/quaternions/: quaternions.rst.txt
_sources/screws/: screws.rst.txt
_sources/trig/: trig.rst.txt
_sources/vectors/: vec3.rst.txt  vec4.rst.txt  vectors.rst.txt
_static/: custom.css
cmake/: CodeCoverage.cmake  FindCheck.cmake
contributing/: contributing.html
coscrews/: coscrews.html
doc/: CMakeLists.txt  Doxyfile.in  Makefile  bibliography.bib  make.bat
doc/sphinx/: about.rst  conf.py  conf.py.in  index.rst  installation.rst  trac3.py  zreferences.rst
doc/sphinx/SE3/: SE3.rst
doc/sphinx/coscrews/: coscrews.rst
doc/sphinx/doxyrest/: enum_ksl_matrix_enum_t.rst  enum_ksl_print_breakBetweenLines_enum_t.rst  global.rst  group_Coscrew.rst  page_index.rst  union_ksl_SE3_t.rst  union_ksl_SE3f_t.rst  union_ksl_coscrew_t.rst  union_ksl_coscrewf_t.rst  union_ksl_inertia_t.rst  union_ksl_inertiaf_t.rst  union_ksl_mat3x3_t.rst  union_ksl_mat3x3f_t.rst  union_ksl_mat4x4_t.rst  union_ksl_quaternion_t.rst  union_ksl_quaternionf_t.rst  union_ksl_screw_t.rst  union_ksl_vec3_t.rst  union_ksl_vec3f_t.rst  union_ksl_vec4_t.rst  union_ksl_vec4f_t.rst  union_ksl_vec4i_t.rst
doc/sphinx/inertia/: inertia.rst
doc/sphinx/influence_coefficient_matrices/: influence_coefficient_matrices.rst
doc/sphinx/mat3x3/: mat3x3.rst
doc/sphinx/mat4x4/: mat4x4.rst
doc/sphinx/matrix-vector/: matrix-vector.rst
doc/sphinx/print-debug/: print-debug.rst
doc/sphinx/quaternions/: quaternions.rst
doc/sphinx/screws/: screws.rst
doc/sphinx/vectors/: vec3.rst  vectors.rst
doxyrest/: enum_ksl_axis_enum_t.html  enum_ksl_matrix_enum_t.html  enum_ksl_print_breakBetweenLines_enum_t.html  global.html  group_Coscrew.html  page_index.html  page_todo.html  struct_ksl_print_options_t.html  struct_ksl_vec3_t_fieldnames.html  struct_ksl_vec3_t_vec.html  union_ksl_SE3_t.html  union_ksl_SE3f_t.html  union_ksl_coscrew_t.html  union_ksl_coscrewf_t.html  union_ksl_inertia_t.html  union_ksl_inertiaf_t.html  union_ksl_mat3x3_t.html  union_ksl_mat3x3f_t.html  union_ksl_mat4x4_t.html  union_ksl_mat4x4f_t.html  union_ksl_quaternion_t.html  union_ksl_quaternionf_t.html  union_ksl_screw_t.html  union_ksl_screwf_t.html  union_ksl_vec3_t.html  union_ksl_vec3f_t.html  union_ksl_vec3i_t.html  union_ksl_vec4_t.html  union_ksl_vec4f_t.html  union_ksl_vec4i_t.html
include/ksl/: array.h  axis.h  coscrew.h  eulerangles.h  inertia.h  ksl.h  linalg.h  mat3x3.h  mat4x4.h  matrix.h  print.h  quaternion.h  screw.h  trig.h  util.h  vec3.h  vec4.h  vector.h
inertia/: inertia.html
influence_coefficient_matrices/: influence_coefficient_matrices.html
kinematics/: kinematics_old.html
linalg/: linalg.html
lu_full/: lu_full.html
mat3x3/: mat3x3.html
mat4x4/: mat4x4.html
matrix-matrix/: matrix-matrix.html
matrix-vector/: matrix-vector.html
notation/: notation.html
print-debug/: print-debug.html
quaternions/: quaternions.html
screws/: screws.html
src/: SE3.c  SE3.h  array.c  axis.c  axis.h  coscrew.c  coscrew.h  inertia.c  inertia.h  ksl.h  ksl_axis.c  ksl_axis.h  ksl_coscrew.c  ksl_coscrew.h  ksl_inertia.c  ksl_inertia.h  ksl_linalg.c  ksl_linalg.h  ksl_matrix.c  ksl_matrix.h  ksl_print.c  ksl_print.h  ksl_quaternion.c  ksl_quaternion.h  ksl_screw.c  ksl_screw.h  ksl_util.c  ksl_util.h  ksl_vector.c  ksl_vector.h  linalg.c  linalg.h  mat3x3.c  mat4x4.c  mat4x4.h  matrix.c  matrix.h  memory.c  memory.h  print.c  (+15 more)
test/: CMakeLists.txt  check_array.c  check_axis.c  check_coscrew.c  check_inertia.c  check_linalg.c  check_matrix.c  check_print.c  check_quaternion.c  check_screw.c  check_util.c  check_vector.c  ksl_test.c  readme.rst
trig/: trig.html
vectors/: vec3.html  vec4.html  vectors.html
